--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     }
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "tailwind-rn": "^3.0.0",
+    "zustand": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
