--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
-    "tailwind-rn": "^3.0.0",
+    "tailwind-rn": "^3.0.1",
     "zustand": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "autoprefixer": "^10.2.4",
     "babel-jest": "^25.1.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -55,7 +56,9 @@
     "jest": "^25.1.0",
     "lint-staged": "^10.5.4",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "postcss": "^8.2.6",
+    "react-test-renderer": "16.13.1",
+    "tailwindcss": "^2.0.3"
   },
   "jest": {
     "preset": "react-native"
