--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "clsx": "^1.1.1",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
