--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,11 +77,20 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext.envConfigFiles = [
+    debug: ".env",
+    release: ".env",
+    anothercustombuild: ".env",
+]
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
