--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@sentry/react-native": "^2.2.0",
     "clsx": "^1.1.1",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.2",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
