--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "@sentry/react-native": "^2.2.0",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
@@ -40,6 +41,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
+    "react-query": "^3.9.6",
     "tailwind-rn": "^3.0.1",
     "zustand": "^3.3.1"
   },
