--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@sentry/react-native": "^2.2.0",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "date-fns": "^2.17.0",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-hook-form": "^6.15.1",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.2",
     "react-native-elements": "^3.2.0",
